<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1C190"
    tools:context="com.example.android.hp_quiz.MainActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="48dp"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <com.example.android.hp_quiz.GifImageView
                android:id="@+id/q1View"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="8dp"
                android:background="@drawable/q1"/>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/Question1"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:lineSpacingExtra="10dp"
                />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:paddingBottom="8dp"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/Q1opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1opt1" />
                <RadioButton
                    android:id="@+id/Q1opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1opt2" />
                <RadioButton
                    android:id="@+id/Q1opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1opt3" />
                <RadioButton
                    android:id="@+id/Q1opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1opt4" />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
        android:text="Submit"
        android:textSize="24sp"
        android:fontFamily="cursive"
        android:onClick="submit"
        style="?android:attr/borderlessButtonStyle"
        />
</RelativeLayout>